--- a/app/src/main/res/layout/fragment_subtopic.xml
+++ b/app/src/main/res/layout/fragment_subtopic.xml
@@ -41,12 +41,19 @@
             android:orientation="vertical"
             android:padding="16dp"
             android:visibility="@{viewmodel.dataAvailable ? View.GONE : View.VISIBLE}"
-            tools:visibility="gone">
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/no_data_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_no_data" />
 
             <TextView
                 android:id="@+id/no_data_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/no_data"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -55,7 +62,7 @@
                 android:id="@+id/btn_retry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:text="@string/retry" />
 
         </LinearLayout>
@@ -77,9 +84,9 @@
                     android:id="@+id/player_view"
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
-                    app:resize_mode="fill"
                     app:fastforward_increment="10000"
                     app:hide_on_touch="true"
+                    app:resize_mode="fill"
                     app:rewind_increment="10000"
                     app:show_buffering="always" />
 
