--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/colorPrimaryLight"
         app:menu="@menu/nav_view" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
